more code quality revisions, primarily remove unused imports